gcc/testsuite/g++.dg/other/builtin1.C
/* { dg-do compile } */

void foo()
{
  __builtin_isless (foo, 0); /* { dg-error "non-floating-point arguments" } */
}
